// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph align 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

.c1 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: right;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

.c2 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: center;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c2 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
  <p
    className="c2"
  />
</div>
`;

exports[`Paragraph color 1`] = `
.c0 {
  color: #e8e7ec;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

.c1 {
  color: #aabbcc;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
</div>
`;

exports[`Paragraph css 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
  background-color: #000;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph default 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph margin 1`] = `
.c4 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0.4018775720164609rem;
  padding: 0;
}

.c1 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c2 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0.4018775720164609rem 0 0 0;
  padding: 0;
}

.c3 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0.4018775720164609rem 0 0;
  padding: 0;
}

.c5 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0 0.4018775720164609rem;
  padding: 0;
}

.c6 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0.4018775720164609rem 0 0.4018775720164609rem;
  padding: 0;
}

.c7 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0.4018775720164609rem 0 0.4018775720164609rem 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c4 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c4 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c4 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c1 {
    font-size: 1rem;
    margin: 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c1 {
    font-size: 1rem;
    margin: 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c1 {
    font-size: 1rem;
    margin: 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c2 {
    font-size: 1rem;
    margin: 0.4018775720164609rem 0 0 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    font-size: 1rem;
    margin: 0.4018775720164609rem 0 0 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    font-size: 1rem;
    margin: 0.4018775720164609rem 0 0 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c3 {
    font-size: 1rem;
    margin: 0 0.4018775720164609rem 0 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c3 {
    font-size: 1rem;
    margin: 0 0.4018775720164609rem 0 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c3 {
    font-size: 1rem;
    margin: 0 0.4018775720164609rem 0 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c5 {
    font-size: 1rem;
    margin: 0 0 0 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    font-size: 1rem;
    margin: 0 0 0 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    font-size: 1rem;
    margin: 0 0 0 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c6 {
    font-size: 1rem;
    margin: 0 0.4018775720164609rem 0 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c6 {
    font-size: 1rem;
    margin: 0 0.4018775720164609rem 0 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c6 {
    font-size: 1rem;
    margin: 0 0.4018775720164609rem 0 0.4018775720164609rem;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c7 {
    font-size: 1rem;
    margin: 0.4018775720164609rem 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c7 {
    font-size: 1rem;
    margin: 0.4018775720164609rem 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c7 {
    font-size: 1rem;
    margin: 0.4018775720164609rem 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
  <p
    className="c2"
  />
  <p
    className="c3"
  />
  <p
    className="c4"
  />
  <p
    className="c5"
  />
  <p
    className="c6"
  />
  <p
    className="c7"
  />
</div>
`;

exports[`Paragraph margin responsive 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0.4018775720164609rem;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0.6944444444444444rem;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 1rem;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 1.44rem;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph padding 1`] = `
.c1 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0.4018775720164609rem;
}

.c2 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0.4018775720164609rem 0 0 0;
}

.c3 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0 0.4018775720164609rem 0 0;
}

.c4 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0 0 0.4018775720164609rem 0;
}

.c5 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0 0 0 0.4018775720164609rem;
}

.c6 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0 0.4018775720164609rem 0 0.4018775720164609rem;
}

.c7 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0.4018775720164609rem 0 0.4018775720164609rem 0;
}

@media only screen and (min-width:48rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c1 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem;
  }
}

@media only screen and (min-width:48rem) {
  .c2 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem 0 0 0;
  }
}

@media only screen and (min-width:64rem) {
  .c2 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem 0 0 0;
  }
}

@media only screen and (min-width:75rem) {
  .c2 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem 0 0 0;
  }
}

@media only screen and (min-width:48rem) {
  .c3 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0.4018775720164609rem 0 0;
  }
}

@media only screen and (min-width:64rem) {
  .c3 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0.4018775720164609rem 0 0;
  }
}

@media only screen and (min-width:75rem) {
  .c3 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0.4018775720164609rem 0 0;
  }
}

@media only screen and (min-width:48rem) {
  .c4 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0 0.4018775720164609rem 0;
  }
}

@media only screen and (min-width:64rem) {
  .c4 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0 0.4018775720164609rem 0;
  }
}

@media only screen and (min-width:75rem) {
  .c4 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0 0.4018775720164609rem 0;
  }
}

@media only screen and (min-width:48rem) {
  .c5 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0 0 0.4018775720164609rem;
  }
}

@media only screen and (min-width:64rem) {
  .c5 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0 0 0.4018775720164609rem;
  }
}

@media only screen and (min-width:75rem) {
  .c5 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0 0 0.4018775720164609rem;
  }
}

@media only screen and (min-width:48rem) {
  .c6 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0.4018775720164609rem 0 0.4018775720164609rem;
  }
}

@media only screen and (min-width:64rem) {
  .c6 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0.4018775720164609rem 0 0.4018775720164609rem;
  }
}

@media only screen and (min-width:75rem) {
  .c6 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0 0.4018775720164609rem 0 0.4018775720164609rem;
  }
}

@media only screen and (min-width:48rem) {
  .c7 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem 0 0.4018775720164609rem 0;
  }
}

@media only screen and (min-width:64rem) {
  .c7 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem 0 0.4018775720164609rem 0;
  }
}

@media only screen and (min-width:75rem) {
  .c7 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.4018775720164609rem 0 0.4018775720164609rem 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c1"
  />
  <p
    className="c2"
  />
  <p
    className="c3"
  />
  <p
    className="c4"
  />
  <p
    className="c5"
  />
  <p
    className="c6"
  />
  <p
    className="c7"
  />
</div>
`;

exports[`Paragraph padding responsive 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 1rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0.4018775720164609rem;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0.6944444444444444rem;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 1rem;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 1.44rem;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph size 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 0.6944444444444444rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 0.6944444444444444rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 0.6944444444444444rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 0.6944444444444444rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
</div>
`;

exports[`Paragraph size responsive 1`] = `
.c0 {
  color: #171813;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
  font-size: 0.6944444444444444rem;
  font-style: normal;
  font-weight: normal;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: none;
  text-align: left;
  margin: 0 0 0.4018775720164609rem 0;
  padding: 0;
}

@media only screen and (min-width:48rem) {
  .c0 {
    font-size: 0.8333333333333334rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:64rem) {
  .c0 {
    font-size: 1rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

@media only screen and (min-width:75rem) {
  .c0 {
    font-size: 1.2rem;
    margin: 0 0 0.4018775720164609rem 0;
    padding: 0;
  }
}

<div>
  <p
    className="c0"
  />
  <p
    className="c0"
  />
</div>
`;
